tests/fixtures/invalid/not_on_int.gcl
// error: logical NOT requires a Bool operand
param a: Int = 5;
node bad: Bool = !@a;
